--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "autoload": {
         "classmap": [
             "database/seeds",
-            "database/factories"
+            "database/factories",
+            "packages"
         ],
         "psr-4": {
             "App\\": "app/"
@@ -28,7 +29,8 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
-        }
+        },
+        "files": ["tests/utilities/functions.php"]
     },
     "extra": {
         "laravel": {
