--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=7.0.0",
         "doctrine/dbal": "^2.6",
         "fideloper/proxy": "~3.3",
+        "google/apiclient": "^2.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0"
     },
